--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Guru's Personal Site</title>
+      <link rel="stylesheet" href="css/styles.css">
   </head>
+
   <body>
+
     <h1><strong>GURUSAKTHIVEL</strong></h1>
     <table cellspacing = 20>
       <tr>
@@ -16,7 +19,7 @@
     <p>Student at <a href="https://sece.ac.in/">Sri Eshwar College</a> studying 1st year.Pythonista!.Home place-Madurai.Got a sibling to annoy.
     <strong>Hoping for a peaceful life</strong> which he cannot even dream about.</p>
     <hr>
-    <h3><strong>Favourites</strong></h3>
+    <h3><strong>Favourites</strong></h3>s
     <ul>
       <li>Football for life!</li>
       <li>Video Games to chill</li>
@@ -90,7 +93,7 @@
     <form class="" action="index.html" method="post">
       <label>Do you know him</label>
       <input type="text" name="" value="">
-      <input type="submit" name="">
+      <input type="submit" name="",value="Goto.html">
     </form>
   </body>
 </html>
